Add HTX and Proto support

--- a/hack/docker/voyager/templates/default-backend.cfg
+++ b/hack/docker/voyager/templates/default-backend.cfg
@@ -22,13 +22,13 @@ backend {{ .DefaultBackend.Name }}
 	{{ range $e := .DefaultBackend.Endpoints }}
 	{{ if $e.ExternalName }}
 	{{ if $e.UseDNSResolver }}
-	server {{ $e.Name }} {{ $e.ExternalName }}:{{ $e.Port }} {{ if $e.DNSResolver }} {{ if $e.CheckHealth }} check {{ if $e.CheckHealthPort }} port {{ $e.CheckHealthPort }} {{ end }} {{ end }} resolvers {{ $e.DNSResolver }} resolve-prefer ipv4 {{ end }} {{ if $e.TLSOption }} {{ $e.TLSOption }} {{ end }} {{ if $e.SendProxy }}{{ $e.SendProxy }}{{ end }}
+	server {{ $e.Name }} {{ $e.ExternalName }}:{{ $e.Port }} {{ if $e.DNSResolver }} {{ if $e.CheckHealth }} check {{ if $e.CheckHealthPort }} port {{ $e.CheckHealthPort }} {{ end }} {{ end }} resolvers {{ $e.DNSResolver }} resolve-prefer ipv4 {{ end }} {{ if $e.TLSOption }} {{ $e.TLSOption }} {{ end }} {{ if $e.SendProxy }}{{ $e.SendProxy }}{{ end }} {{ if $.DefaultBackend.ALPNOptions }}{{ $.DefaultBackend.ALPNOptions }}{{ end }} {{ if $.DefaultBackend.Proto }}proto {{ $.DefaultBackend.Proto }}{{ end }}
 	{{ else if not $.DefaultBackend.BackendRules }}
 	acl https ssl_fc
 	http-request redirect location https://{{$e.ExternalName}}:{{ $e.Port }} code 301 if https
 	http-request redirect location http://{{$e.ExternalName}}:{{ $e.Port }} code 301 unless https
 	{{ end }}
 	{{ else }}
-	server {{ $e.Name }} {{ $e.IP }}:{{ $e.Port }} {{ if $e.MaxConnections }} maxconn {{ $e.MaxConnections }} {{ end }} {{ if $e.Weight }} weight {{ $e.Weight }}{{ end }} {{ if $.DefaultBackend.Sticky }} cookie {{ $e.Name }}{{ end }} {{ if $e.TLSOption }} {{ $e.TLSOption }} {{ end }} {{ if $e.CheckHealth }} check {{ if $e.CheckHealthPort }} port {{ $e.CheckHealthPort }} {{ end }} {{ end }} {{ if $e.SendProxy }}{{ $e.SendProxy }}{{ end }}
+	server {{ $e.Name }} {{ $e.IP }}:{{ $e.Port }} {{ if $e.MaxConnections }} maxconn {{ $e.MaxConnections }} {{ end }} {{ if $e.Weight }} weight {{ $e.Weight }}{{ end }} {{ if $.DefaultBackend.Sticky }} cookie {{ $e.Name }}{{ end }} {{ if $e.TLSOption }} {{ $e.TLSOption }} {{ end }} {{ if $e.CheckHealth }} check {{ if $e.CheckHealthPort }} port {{ $e.CheckHealthPort }} {{ end }} {{ end }} {{ if $e.SendProxy }}{{ $e.SendProxy }}{{ end }} {{ if $.DefaultBackend.ALPNOptions }}{{ $.DefaultBackend.ALPNOptions }}{{ end }} {{ if $.DefaultBackend.Proto }}proto {{ $.DefaultBackend.Proto }}{{ end }}
 	{{ end }}
 	{{ end }}
