--- a/hack/docker/voyager/templates/http-backend.cfg
+++ b/hack/docker/voyager/templates/http-backend.cfg
@@ -25,12 +25,12 @@ backend {{ $path.Backend.Name }}
 	{{ range $index, $e := $path.Backend.Endpoints }}
 	{{ if $e.ExternalName }}
 	{{ if $e.UseDNSResolver }}
-	server {{ $e.Name }} {{ $e.ExternalName }}:{{ $e.Port }} {{ if $e.DNSResolver }} {{ if $e.CheckHealth }} check {{ if $e.CheckHealthPort }} port {{ $e.CheckHealthPort }} {{ end }} {{ end }} resolvers {{ $e.DNSResolver }} resolve-prefer ipv4 {{ end }} {{ if $e.TLSOption }} {{ $e.TLSOption }} {{ end }} {{ if $e.SendProxy }}{{ $e.SendProxy }}{{ end }}
+	server {{ $e.Name }} {{ $e.ExternalName }}:{{ $e.Port }} {{ if $e.DNSResolver }} {{ if $e.CheckHealth }} check {{ if $e.CheckHealthPort }} port {{ $e.CheckHealthPort }} {{ end }} {{ end }} resolvers {{ $e.DNSResolver }} resolve-prefer ipv4 {{ end }} {{ if $e.TLSOption }} {{ $e.TLSOption }} {{ end }} {{ if $e.SendProxy }}{{ $e.SendProxy }}{{ end }} {{ if $path.Backend.ALPNOptions }}{{ $path.Backend.ALPNOptions }}{{ end }} {{ if $path.Backend.Proto }}proto {{ $path.Backend.Proto }}{{ end }}
 	{{ else if not $path.Backend.BackendRules }}
 	http-request redirect location {{ if $.OffloadSSL }}https://{{ else }}http://{{ end }}{{$e.ExternalName}}:{{ $e.Port }} code 301
 	{{ end }}
 	{{ else }}
-	server {{ $e.Name }} {{ $e.IP }}:{{ $e.Port }} {{ if $e.MaxConnections }} maxconn {{ $e.MaxConnections }} {{ end }} {{ if $e.Weight }} weight {{ $e.Weight }} {{ end }} {{ if $path.Backend.Sticky }} cookie {{ backend_hash $e.Name $index $path.Backend.StickyCookieHash }} {{ end }} {{ if $e.TLSOption }} {{ $e.TLSOption }} {{ end }} {{ if $e.CheckHealth }} check {{ if $e.CheckHealthPort }} port {{ $e.CheckHealthPort }} {{ end }} {{ end }} {{ if $e.SendProxy }}{{ $e.SendProxy }}{{ end }}
+	server {{ $e.Name }} {{ $e.IP }}:{{ $e.Port }} {{ if $e.MaxConnections }} maxconn {{ $e.MaxConnections }} {{ end }} {{ if $e.Weight }} weight {{ $e.Weight }} {{ end }} {{ if $path.Backend.Sticky }} cookie {{ backend_hash $e.Name $index $path.Backend.StickyCookieHash }} {{ end }} {{ if $e.TLSOption }} {{ $e.TLSOption }} {{ end }} {{ if $e.CheckHealth }} check {{ if $e.CheckHealthPort }} port {{ $e.CheckHealthPort }} {{ end }} {{ end }} {{ if $e.SendProxy }}{{ $e.SendProxy }}{{ end }} {{ if $path.Backend.ALPNOptions }}{{ $path.Backend.ALPNOptions }}{{ end }} {{ if $path.Backend.Proto }}proto {{ $path.Backend.Proto }}{{ end }}
 	{{ end }}
 	{{ end }}
 {{ end }}
