--- a/hack/docker/voyager/templates/http-frontend.cfg
+++ b/hack/docker/voyager/templates/http-frontend.cfg
@@ -1,6 +1,6 @@
 frontend {{ .FrontendName }}
 	{{ if .OffloadSSL }}
-	bind {{ .Address }}:{{ .Port }} {{ if .AcceptProxy }}accept-proxy{{ end }} ssl no-sslv3 no-tlsv10 no-tls-tickets crt /etc/ssl/private/haproxy/tls/ {{ if .TLSAuth }} ca-file /etc/ssl/private/haproxy/ca/{{ .TLSAuth.CAFile }} {{ if .TLSAuth.CRLFile }} crl-file /etc/ssl/private/haproxy/ca/{{ .TLSAuth.CRLFile }}{{ end }} verify {{ .TLSAuth.VerifyClient }} {{ if .TLSAuth.ErrorPage }}crt-ignore-err all {{end}}{{ end }} {{ if .ALPNOptions }}{{ .ALPNOptions }}{{ end }}
+	bind {{ .Address }}:{{ .Port }} {{ if .AcceptProxy }}accept-proxy{{ end }} ssl no-sslv3 no-tlsv10 no-tls-tickets crt /etc/ssl/private/haproxy/tls/ {{ if .TLSAuth }} ca-file /etc/ssl/private/haproxy/ca/{{ .TLSAuth.CAFile }} {{ if .TLSAuth.CRLFile }} crl-file /etc/ssl/private/haproxy/ca/{{ .TLSAuth.CRLFile }}{{ end }} verify {{ .TLSAuth.VerifyClient }} {{ if .TLSAuth.ErrorPage }}crt-ignore-err all {{end}}{{ end }} {{ if .ALPNOptions }}{{ .ALPNOptions }}{{ end }} {{ if .Proto }}proto {{ .Proto }}{{ end }}
 	# Mark all cookies as secure
 	rsprep ^Set-Cookie:\ (.*) Set-Cookie:\ \1;\ Secure
 	{{ if .EnableHSTS }}
@@ -8,7 +8,7 @@ frontend {{ .FrontendName }}
 	http-response set-header Strict-Transport-Security max-age={{ .HSTSMaxAge }}{{ if .HSTSPreload }};\ preload{{ end }}{{ if .HSTSIncludeSubDomains }};\ includeSubDomains{{ end }}
 	{{ end }}
 	{{ else }}
-	bind {{ .Address }}:{{ .Port }} {{ if .AcceptProxy }}accept-proxy{{ end }}
+	bind {{ .Address }}:{{ .Port }} {{ if .AcceptProxy }}accept-proxy{{ end }} {{ if .Proto }}proto {{ .Proto }}{{ end }}
 	{{ end }}
 
 	mode http
