--- a/hack/docker/voyager/templates/tcp-frontend.cfg
+++ b/hack/docker/voyager/templates/tcp-frontend.cfg
@@ -1,5 +1,5 @@
 frontend {{ .FrontendName }}
-	bind {{ .Address }}:{{ .Port }} {{ if .AcceptProxy }}accept-proxy{{ end }} {{ if .OffloadSSL }}ssl no-sslv3 no-tlsv10 no-tls-tickets crt /etc/ssl/private/haproxy/tls/ {{ end }} {{ if .TLSAuth }} ca-file /etc/ssl/private/haproxy/ca/{{ .TLSAuth.CAFile }} {{ if .TLSAuth.CRLFile }} crl-file /etc/ssl/private/haproxy/ca/{{ .TLSAuth.CRLFile }}{{ end }} verify {{ .TLSAuth.VerifyClient }}{{ end }} {{ if .ALPNOptions }}{{ .ALPNOptions }}{{ end }}
+	bind {{ .Address }}:{{ .Port }} {{ if .AcceptProxy }}accept-proxy{{ end }} {{ if .OffloadSSL }}ssl no-sslv3 no-tlsv10 no-tls-tickets crt /etc/ssl/private/haproxy/tls/ {{ end }} {{ if .TLSAuth }} ca-file /etc/ssl/private/haproxy/ca/{{ .TLSAuth.CAFile }} {{ if .TLSAuth.CRLFile }} crl-file /etc/ssl/private/haproxy/ca/{{ .TLSAuth.CRLFile }}{{ end }} verify {{ .TLSAuth.VerifyClient }}{{ end }} {{ if .ALPNOptions }}{{ .ALPNOptions }}{{ end }} {{ if .Proto }}proto {{ .Proto }}{{ end }}
 	mode tcp
 
 	{{ if .Limit }}
