--- a/api/crds/ingress.yaml
+++ b/api/crds/ingress.yaml
@@ -887,6 +887,24 @@ spec:
                       type: array
             backend:
               properties:
+                alpn:
+                  description: Application-Layer Protocol Negotiation (ALPN) is a
+                    Transport Layer Security (TLS) extension for application layer
+                    protocol negotiation. ALPN allows the application layer to negotiate
+                    which protocol should be performed over a secure connection in
+                    a manner which avoids additional round trips and which is independent
+                    of the application layer protocols. It is used by HTTP/2. If provided
+                    a list of alpn will be added to port as alpn option1,option2,...
+                    If SecretName is Provided this secret will be used to terminate
+                    SSL with alpn options. If Secret name is not provided backend
+                    server is responsible for handling SSL. Note that, the order of
+                    the options indicates the preference If the ALPN list contains
+                    "h2",  "option http-use-htx" will be added to enable HTX mode
+                    https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#option%20http-use-htx
+                    https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#alpn
+                  items:
+                    type: string
+                  type: array
                 backendRules:
                   description: Serialized HAProxy rules to apply on server backend
                     including request, response or header rewrite. acls also can be
@@ -914,6 +932,10 @@ spec:
                 name:
                   description: User can specify backend name for using it with custom
                     acl Otherwise it will be generated
+                  type: string
+                proto:
+                  description: HTTP protocol to use If the Proto contains "h2",  "option
+                    http-use-htx" will be added to enable HTX mode https://www.haproxy.com/blog/haproxy-1-9-2-adds-grpc-support/
                   type: string
                 rewriteRules:
                   description: |-
@@ -1289,7 +1311,11 @@ spec:
                           of alpn will be added to port as alpn option1,option2,...
                           If SecretName is Provided this secret will be used to terminate
                           SSL with alpn options. If Secret name is not provided backend
-                          server is responsible for handling SSL.
+                          server is responsible for handling SSL. Note that, the order
+                          of the options indicates the preference If the ALPN list
+                          contains "h2",  "option http-use-htx" will be added to enable
+                          HTX mode https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#option%20http-use-htx
+                          https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#alpn
                         items:
                           type: string
                         type: array
@@ -1310,6 +1336,27 @@ spec:
                           properties:
                             backend:
                               properties:
+                                alpn:
+                                  description: Application-Layer Protocol Negotiation
+                                    (ALPN) is a Transport Layer Security (TLS) extension
+                                    for application layer protocol negotiation. ALPN
+                                    allows the application layer to negotiate which
+                                    protocol should be performed over a secure connection
+                                    in a manner which avoids additional round trips
+                                    and which is independent of the application layer
+                                    protocols. It is used by HTTP/2. If provided a
+                                    list of alpn will be added to port as alpn option1,option2,...
+                                    If SecretName is Provided this secret will be
+                                    used to terminate SSL with alpn options. If Secret
+                                    name is not provided backend server is responsible
+                                    for handling SSL. Note that, the order of the
+                                    options indicates the preference If the ALPN list
+                                    contains "h2",  "option http-use-htx" will be
+                                    added to enable HTX mode https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#option%20http-use-htx
+                                    https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#alpn
+                                  items:
+                                    type: string
+                                  type: array
                                 backendRules:
                                   description: Serialized HAProxy rules to apply on
                                     server backend including request, response or
@@ -1339,6 +1386,11 @@ spec:
                                 name:
                                   description: User can specify backend name for using
                                     it with custom acl Otherwise it will be generated
+                                  type: string
+                                proto:
+                                  description: HTTP protocol to use If the Proto contains
+                                    "h2",  "option http-use-htx" will be added to
+                                    enable HTX mode https://www.haproxy.com/blog/haproxy-1-9-2-adds-grpc-support/
                                   type: string
                                 rewriteRules:
                                   description: |-
@@ -1371,6 +1423,10 @@ spec:
                         oneOf:
                         - type: string
                         - type: integer
+                      proto:
+                        description: HTTP protocol to use If the Proto contains "h2",  "option
+                          http-use-htx" will be added to enable HTX mode https://www.haproxy.com/blog/haproxy-1-9-2-adds-grpc-support/
+                        type: string
                     required:
                     - paths
                   tcp:
@@ -1390,7 +1446,11 @@ spec:
                           of alpn will be added to port as alpn option1,option2,...
                           If SecretName is Provided this secret will be used to terminate
                           SSL with alpn options. If Secret name is not provided backend
-                          server is responsible for handling SSL.
+                          server is responsible for handling SSL. Note that, the order
+                          of the options indicates the preference If the ALPN list
+                          contains "h2",  "option http-use-htx" will be added to enable
+                          HTX mode https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#option%20http-use-htx
+                          https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#alpn
                         items:
                           type: string
                         type: array
@@ -1398,6 +1458,25 @@ spec:
                         description: IngressBackend describes all endpoints for a
                           given service and port.
                         properties:
+                          alpn:
+                            description: Application-Layer Protocol Negotiation (ALPN)
+                              is a Transport Layer Security (TLS) extension for application
+                              layer protocol negotiation. ALPN allows the application
+                              layer to negotiate which protocol should be performed
+                              over a secure connection in a manner which avoids additional
+                              round trips and which is independent of the application
+                              layer protocols. It is used by HTTP/2. If provided a
+                              list of alpn will be added to port as alpn option1,option2,...
+                              If SecretName is Provided this secret will be used to
+                              terminate SSL with alpn options. If Secret name is not
+                              provided backend server is responsible for handling
+                              SSL. Note that, the order of the options indicates the
+                              preference If the ALPN list contains "h2",  "option
+                              http-use-htx" will be added to enable HTX mode https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#option%20http-use-htx
+                              https://cbonte.github.io/haproxy-dconv/1.9/configuration.html#alpn
+                            items:
+                              type: string
+                            type: array
                           backendRules:
                             description: Serialized HAProxy rules to apply on server
                               backend including request, response or header rewrite.
@@ -1419,6 +1498,11 @@ spec:
                             description: User can specify backend name for using it
                               with custom acl Otherwise it will be generated
                             type: string
+                          proto:
+                            description: HTTP protocol to use If the Proto contains
+                              "h2",  "option http-use-htx" will be added to enable
+                              HTX mode https://www.haproxy.com/blog/haproxy-1-9-2-adds-grpc-support/
+                            type: string
                           serviceName:
                             description: Specifies the name of the referenced service.
                             type: string
@@ -1438,6 +1522,10 @@ spec:
                         oneOf:
                         - type: string
                         - type: integer
+                      proto:
+                        description: HTTP protocol to use If the Proto contains "h2",  "option
+                          http-use-htx" will be added to enable HTX mode https://www.haproxy.com/blog/haproxy-1-9-2-adds-grpc-support/
+                        type: string
               type: array
             schedulerName:
               description: If specified, the pod will be dispatched by specified scheduler.
